--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,15 @@
   --primary-font:'Roboto', sans-serif;
 }
 
+h1,h2,h3,p {margin-top: 0; margin-bottom: ;}
+
+ul {margin-top: 0; margin-bottom: 0; padding-left: 0;}
 
 .list {
   list-style: none;
 }
+
+img {display: block;}
 
 .link {
   text-decoration: none;
@@ -25,6 +30,41 @@ font-family: var(--primary-font);
 color: var(--color-navy-blue-overlay-shadow-heading);
 background-color: var(--color-body);}
 
+.container {
+  width: 1158px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.page-heder {padding-top: 24px;
+padding-bottom: 24px;}
+
+.page-heder-container {
+  display: flex;
+  align-items: center;
+}
+
+.site-nav {
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+}
+
+.address-main {margin-left: auto;}
+
+.address {
+display: flex;
+align-items: center;}
+
+.menu-item:not(:last-child) {
+  margin-right: 40px;
+}
 
 .menu-link {
   font-weight: 500;
@@ -43,7 +83,9 @@ background-color: var(--color-body);}
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: var(--color-slate-text)}
+color: var(--color-slate-text);
+margin-right: 40px;   !!!!!!!!!!!!!!!!!!!!!
+}
 
 .contact-mail-phone:hover,
 .contact-mail-phone:focus {
@@ -58,6 +100,11 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 color: var(--color-body);
 cursor: pointer;
+
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border: transparent;
+padding: 16px 32px;
 }
   
 .button:hover,
@@ -105,17 +152,27 @@ font-size: 18px;
 line-height: 1.33;
 letter-spacing: 0.03em;
 color: var(--color-navy-blue-overlay-shadow-heading);
-text-transform: uppercase;}
+text-transform: uppercase;
+
+margin-right: 76px;}
 
   .part-of-word {
     color: var(--color-iris-focus-aktiv-link);
   }
 
   
-  
-  .fourth {background-color: var(--color-cloud-accent)}
+  .fourth {padding-top: 120px;
+    padding-bottom: 120px;
+    background-color: var(--color-cloud-accent)}
 
-  .footer {
+  .team-list {display: flex;
+  flex-wrap: wrap;}
+  
+  .team-card:not(:nth-child(4n)) {
+    margin-right: 24px;
+  }
+  
+    .footer {
     background-color: var(--color-navy-blue-overlay-shadow-heading);
   }
 
