--- a/css/styles.css
+++ b/css/styles.css
@@ -46,10 +46,16 @@ background-color: var(--color-body);}
 padding-top: 120px;
 padding-bottom: 120px;}
 
+.section-padding-portfolio {
+  padding-top: 72px;
+  padding-bottom: 120px;
+}
+
 .section-padding-top {padding-top: 120px;}
 
 .page-heder {padding-top: 24px;
-padding-bottom: 24px;}
+padding-bottom: 24px;
+border-bottom: 1px solid var(--color-cornflower-accent);}
 
 .page-heder-container {
   display: flex;
@@ -64,6 +70,19 @@ padding-bottom: 24px;}
 .menu {
   display: flex;
   align-items: center;
+}
+
+.portfolio-btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 168px;
+}
+
+.menu-portfolio-btn:not(:last-child) {
+  margin-right: 24px;
 }
 
 .address-main {margin-left: auto;}
@@ -90,11 +109,13 @@ align-items: center;}
 }
 
 .contact-mail-phone  {
+font-family: 'Roboto', sans-serif;
+font-style: normal;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--color-slate-text);
-margin-right: 40px;   !!!!!!!!!!!!!!!!!!!!!
+margin-right: 40px;
 }
 
 .contact-mail-phone:hover,
@@ -123,16 +144,27 @@ background-color: var(--color-ocean-hover-pressed);
 color: var(--color-body);
 }
 
-.hero {background-color: var(--color-navy-blue-overlay-shadow-heading)}
+.container-hero {width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 188px;
+  padding-bottom: 188px;
+text-align: center;}
+
+
+.hero {
+  background-color: var(--color-navy-blue-overlay-shadow-heading); 
+}
 
 .hero-one {
 width: 496px;
+margin-right: auto;
+margin-left: auto;
+padding-bottom: 48px;
 font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
 color: var(--color-body);
-padding-top: 188px;
-text-align: center;
 }
 
 
@@ -208,21 +240,42 @@ gap: 24px;}
   padding-bottom: 32px;
 }
    
+
+.portfolio-card-heder {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  border-right: 1px solid var(--color-cornflower-accent);
+  border-left: 1px solid var(--color-cornflower-accent);
+  border-bottom: 1px solid var(--color-cornflower-accent);
+}
 .team-card {
   flex-basis: calc((100% - 3*24px) / 4);}
-  
+
+.portfolio-card {
+flex-basis: calc((100% - 2*24px) / 3);}
+
+
   .footer {
     background-color: var(--color-navy-blue-overlay-shadow-heading);
   }
 
-  .logo-foot {
+
+.logo-foot {
   font-family: 'raleway', sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--color-cloud-accent);
-  text-transform: uppercase;}
+  text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
+  margin-top: 100px;
+}
   
   .part-of-word-foot {
   color: var(--color-iris-focus-aktiv-link);
@@ -231,8 +284,10 @@ gap: 24px;}
   .text-footer {
   font-size: 16px;
   line-height: 1.5;
+  width: 264px;
   letter-spacing: 0.02em;
-  color: var(--color-cornflower-accent);}
+  color: var(--color-cornflower-accent);
+padding-bottom: 100px;}
 
   .nav-btn:hover,
   .nav-btn:focus{
@@ -249,4 +304,7 @@ gap: 24px;}
   letter-spacing: 0.04em;
   color: var(--color-iris-focus-aktiv-link);
   cursor: pointer;
+  padding: 12px 24px;
+  border: 1px solid #E7E9FC;
+border-radius: 4px;
   }
