--- a/css/styles.css
+++ b/css/styles.css
@@ -47,11 +47,10 @@ padding-top: 120px;
 padding-bottom: 120px;}
 
 .section-padding-portfolio {
-  padding-top: 72px;
+  padding-top: 168px;
   padding-bottom: 120px;
 }
 
-.section-padding-top {padding-top: 120px;}
 
 .page-heder {padding-top: 24px;
 padding-bottom: 24px;
@@ -78,7 +77,6 @@ border-bottom: 1px solid var(--color-cornflower-accent);}
   justify-content: center;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 168px;
 }
 
 .menu-portfolio-btn:not(:last-child) {
@@ -133,10 +131,9 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 color: var(--color-body);
 cursor: pointer;
-min-width: 105px;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
-border: transparent;
+border: none;
 padding: 16px 32px;
 }
   
@@ -146,28 +143,24 @@ background-color: var(--color-ocean-hover-pressed);
 color: var(--color-body);
 }
 
-.container-hero {width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 188px;
-  padding-bottom: 188px;
-  text-align: center;}
-
-
 .hero {
   background-color: var(--color-navy-blue-overlay-shadow-heading);
+  padding: 188px 0px;
+  text-align: center;
 }
 
 .hero-one {
 width: 500px;
 margin-right: auto;
 margin-left: auto;
-padding-bottom: 48px;
+margin-bottom: 48px;
 font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
 color: var(--color-body);
 }
+
+.second {padding-top: 120px;}
 
 
 .second-head {
@@ -228,25 +221,20 @@ margin-right: 76px;}
   .fourth {
     background-color: var(--color-cloud-accent)}
 
-.team-list {
+.team-list {margin-top: 72px;
 display: flex;
 flex-wrap: wrap;
-gap: 24px;}
+gap: 48px 24px;}
 
 .second-card-heder {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
+  text-align: center;
 }
    
 
 .portfolio-card-heder {
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
+  text-align: center;
   padding-top: 32px;
   padding-bottom: 32px;
   padding-left: 16px;
@@ -255,7 +243,10 @@ gap: 24px;}
   border-bottom: 1px solid var(--color-cornflower-accent);
 }
 .team-card {
-  flex-basis: calc((100% - 3*24px) / 4);}
+flex-basis: calc((100% - 3*24px) / 4);
+background-color: var(--color-body);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+border-radius: 0px 0px 4px 4px;}
 
 .portfolio-card {
 flex-basis: calc((100% - 2*24px) / 3);}
@@ -263,6 +254,8 @@ flex-basis: calc((100% - 2*24px) / 3);}
 
   .footer {
     background-color: var(--color-navy-blue-overlay-shadow-heading);
+    padding-top: 100px;
+    padding-bottom: 100px;
   }
 
 
@@ -276,7 +269,6 @@ flex-basis: calc((100% - 2*24px) / 3);}
   text-transform: uppercase;
   display: inline-block;
   margin-bottom: 16px;
-  margin-top: 100px;
 }
   
   .part-of-word-foot {
@@ -288,8 +280,7 @@ flex-basis: calc((100% - 2*24px) / 3);}
   line-height: 1.5;
   width: 264px;
   letter-spacing: 0.02em;
-  color: var(--color-cornflower-accent);
-padding-bottom: 100px;}
+  color: var(--color-cornflower-accent);}
 
   .nav-btn:hover,
   .nav-btn:focus{
